Added a background. & changed button icons

--- a/cards.html
+++ b/cards.html
@@ -88,8 +88,8 @@
                 </div>
             </div>
             <div class="card-swiper-buttons">
-                <button id="back-button" onclick="handleBackClick()"><</button>
-                <button id="next-button" onclick="handleNextClick()">></button>
+                <button id="back-button" onclick="handleBackClick()">◄</button>
+                <button id="next-button" onclick="handleNextClick()">►</button>
             </div>
         </div>
     </body>
