changed buttons (again)

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>cards</title>
-        <link rel="icon" type="image/x-icon" href="favicon.ico">    
-        <link rel="stylesheet" href="cards.css">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class="card-swiper">
@@ -83,7 +83,7 @@
 
                     </div>
                     <div class="big-card card">
-
+ 
                     </div>
                 </div>
             </div>
@@ -93,5 +93,5 @@
             </div>
         </div>
     </body>
-    <script src="cards.js"></script>
+    <script src="index.js"></script>
 </html>
