--- a/lib/index.html
+++ b/lib/index.html
@@ -4,7 +4,7 @@
         <title>cards</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="index.css">
-    </head>
+    <script defer src="cardtest.mjs"></script></head>
     <body>
         <div class="card-swiper">
             <div class="card-groups">
@@ -88,8 +88,8 @@
                 </div>
             </div>
             <div class="card-swiper-buttons">
-                <button id="back-button" onclick="handleBackClick()"><</button>
-                <button id="next-button" onclick="handleNextClick()">></button>
+                <button id="back-button" onclick="handleBackClick()">❮</button>
+                <button id="next-button" onclick="handleNextClick()">❯</button>
             </div>
         </div>
     </body>
