--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>cards</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="index.css" type="module">
     </head>
     <body>
         <div class="card-swiper">
@@ -93,5 +93,5 @@
             </div>
         </div>
     </body>
-    <script src="index.js"></script>
+    <script src="index.mjs" type="module"></script>
 </html>
